testsuite/tests/indexed-types/should_fail/T5934.stderr

T5934.hs:12:7: error:
    • Cannot instantiate unification variable ‘a0’
      with a type involving foralls: (forall s. GenST s) -> Int
        GHC doesn't yet support impredicative polymorphism
    • In the expression: 0
      In an equation for ‘run’: run = 0
